modify-the-startup-command