@@ -91,21 +91,61 @@ After preparing the new version of the executable file and backing up the origin
 <a id="step5"></a> 
 ### Step 5: Start the Node
 
-Please select the appropriate startup command based on your node type.
+Please select the appropriate startup command below as a reference based on the node type and CPU architecture. For detailed explanations of the command parameters, refer to the [ Deployment](https://tronprotocol.github.io/documentation-en/using_javatron/installing_javatron/#starting-a-fullnode-on-the-tron-main-network) section. Adjust the parameter values according to your actual runtime environment.
 
-  * **Super Representative (Block-Producing Node)**
-
-    ```
-    nohup java -Xmx24g -XX:+UseConcMarkSweepGC -jar FullNode.jar  -p <your private key> --witness -c config.conf </dev/null &>/dev/null &
-    ```
-    > **Note**: We recommend managing your private key using a `keystore` file or within the configuration file, rather than passing it directly as a command-line argument.
+#### Super Representative Node (Block-Producing Node)
+* **x86_64 Architecture (Only JDK 8 is supported)**
+```bash
+nohup java -Xms9G -Xmx24G -XX:ReservedCodeCacheSize=256m \
+    -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=512m \
+    -XX:MaxDirectMemorySize=1G -XX:+PrintGCDetails \
+    -XX:+PrintGCDateStamps  -Xloggc:gc.log \
+    -XX:+UseConcMarkSweepGC -XX:NewRatio=3 \
+    -XX:+CMSScavengeBeforeRemark -XX:+ParallelRefProcEnabled \
+    -XX:+HeapDumpOnOutOfMemoryError \
+    -XX:+UseCMSInitiatingOccupancyOnly  -XX:CMSInitiatingOccupancyFraction=70 \
+    -jar ./build/libs/FullNode.jar --witness -c config.conf &
+```
+* **ARM64 Architecture (Only JDK 17 is supported)**
+```bash
+nohup java -Xms9G -Xmx24G -XX:+UseZGC \
+    -Xlog:gc,gc+heap:file=gc.log:time,tags,level:filecount=10,filesize=100M \
+    -XX:ReservedCodeCacheSize=256m \
+    -XX:+UseCodeCacheFlushing \
+    -XX:MetaspaceSize=256m \
+    -XX:MaxMetaspaceSize=512m \
+    -XX:MaxDirectMemorySize=1g \
+    -XX:+HeapDumpOnOutOfMemoryError \
+    -jar ./build/libs/FullNode.jar --witness -c config.conf &
+```
+> **Note**: We recommend managing your private key using a `keystore` file or within the configuration file, rather than passing it directly as a command-line argument.
     
-  * **Regular FullNode**
+#### Regular FullNode
 
-    ```
-    nohup java -Xmx24g -XX:+UseConcMarkSweepGC -jar FullNode.jar -c config.conf </dev/null &>/dev/null &
-
-    ```
+* **x86_64 Architecture (Only JDK 8 is supported)**
+```bash
+nohup java -Xms9G -Xmx12G -XX:ReservedCodeCacheSize=256m \
+    -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=512m \
+    -XX:MaxDirectMemorySize=1G -XX:+PrintGCDetails \
+    -XX:+PrintGCDateStamps  -Xloggc:gc.log \
+    -XX:+UseConcMarkSweepGC -XX:NewRatio=3 \
+    -XX:+CMSScavengeBeforeRemark -XX:+ParallelRefProcEnabled \
+    -XX:+HeapDumpOnOutOfMemoryError \
+    -XX:+UseCMSInitiatingOccupancyOnly  -XX:CMSInitiatingOccupancyFraction=70 \
+    -jar ./build/libs/FullNode.jar -c main_net_config.conf &
+```
+* **ARM64 Architecture (Only JDK 17 is supported)**
+```bash
+nohup java -Xmx9G -XX:+UseZGC \
+    -Xlog:gc,gc+heap:file=gc.log:time,tags,level:filecount=10,filesize=100M \
+    -XX:ReservedCodeCacheSize=256m \
+    -XX:+UseCodeCacheFlushing \
+    -XX:MetaspaceSize=256m \
+    -XX:MaxMetaspaceSize=512m \
+    -XX:MaxDirectMemorySize=1g \
+    -XX:+HeapDumpOnOutOfMemoryError \
+    -jar ./build/libs/FullNode.jar -c main_net_config.conf &
+```
 
 ### Step 6: Verify and Monitor
 
